fullSandbox11072023/force-app/main/default/objects/Account/fields/Ownerid__c.field-meta.xml
<CustomField>
    <fullName>Ownerid__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownerid</label>
    <type>Text</type>
</CustomField>