fullSandbox11072023/force-app/main/default/objects/Account/fields/PleurEvacRep__c.field-meta.xml
<CustomField>
    <fullName>PleurEvacRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pleur-Evac Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>