fullSandbox11072023/force-app/main/default/objects/Account/fields/Radiology__c.field-meta.xml
<CustomField>
    <fullName>Radiology__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box is account has a radiology department.</description>
    <inlineHelpText>Check this box is account has a radiology department.</inlineHelpText>
    <label>Radiology</label>
    <type>Checkbox</type>
</CustomField>