fullSandbox11072023/force-app/main/default/objects/Account/fields/RespiratorySpecialityContract__c.field-meta.xml
<CustomField>
    <fullName>RespiratorySpecialityContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Respiratory Speciality Contract</label>
    <type>Checkbox</type>
</CustomField>