fullSandbox11072023/force-app/main/default/objects/Account/fields/RR_ID__c.field-meta.xml
<CustomField>
    <fullName>RR_ID__c</fullName>
    <description>Use in the Latin America Sales Target Report</description>
    <formula>IF(SAP_Sold_To__c != NULL, SAP_Sold_To__c,
IF(LatAm_Account_Code__c != NULL, LatAm_Account_Code__c,
&quot;&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RR_ID</label>
    <type>Text</type>
</CustomField>