fullSandbox11072023/force-app/main/default/objects/Account/fields/Sales_by_BU_Key__c.field-meta.xml
<CustomField>
    <fullName>Sales_by_BU_Key__c</fullName>
    <label>Sales by BU Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>