fullSandbox11072023/force-app/main/default/objects/Account/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <label>Sales Org</label>
    <length>4</length>
    <type>Text</type>
</CustomField>