fullSandbox11072023/force-app/main/default/objects/Account/fields/Sales_Org_Key__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Key__c</fullName>
    <formula>Sales_Org__c + Distribution_Channel__c</formula>
    <label>Sales Org Key</label>
    <type>Text</type>
</CustomField>