fullSandbox11072023/force-app/main/default/objects/Account/fields/SAP_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_Status__c</fullName>
    <formula>CASE(zBlock__c, 
&quot;00&quot;, &quot;Active&quot;, 
&quot;01&quot;, &quot;Credit Block&quot;,
&quot;02&quot;, &quot;Overall Block&quot;,
&quot;Z1&quot;, &quot;Pending Deletion&quot;,
&quot;Z2&quot;, &quot;Finance Block&quot;,
&quot;Z3&quot;, &quot;Pending Review&quot;,
&quot;ERROR&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Account Status</label>
    <type>Text</type>
</CustomField>