fullSandbox11072023/force-app/main/default/objects/Account/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <inlineHelpText>Nightly Data Load Populates this...</inlineHelpText>
    <label>SAP Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>