fullSandbox11072023/force-app/main/default/objects/Account/fields/SAP_Sold_To__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sold_To__c</fullName>
    <externalId>true</externalId>
    <label>Customer Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>