fullSandbox11072023/force-app/main/default/objects/Account/fields/Secondary_GPO__c.field-meta.xml
<CustomField>
    <fullName>Secondary_GPO__c</fullName>
    <inlineHelpText>The secondary group purchasing organization.</inlineHelpText>
    <label>Secondary GPO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amerinet</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>HPG</fullName>
            </value>
            <value>
                <fullName>MedAssets</fullName>
            </value>
            <value>
                <fullName>Novation</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Ascension</fullName>
            </value>
            <value>
                <fullName>Dignity</fullName>
            </value>
            <value>
                <fullName>Intralere</fullName>
            </value>
            <value>
                <fullName>Vizient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>