fullSandbox11072023/force-app/main/default/objects/Account/fields/Secondary_GPO_Fix__c.field-meta.xml
<CustomField>
    <fullName>Secondary_GPO_Fix__c</fullName>
    <formula>SUBSTITUTE(TEXT(Secondary_GPO__c), &quot;-&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary GPO Fix</label>
    <type>Text</type>
</CustomField>