fullSandbox11072023/force-app/main/default/objects/Account/fields/SF_Acct_ID18__c.field-meta.xml
<CustomField>
    <fullName>SF_Acct_ID18__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Acct ID18</label>
    <type>Text</type>
</CustomField>