fullSandbox11072023/force-app/main/default/objects/Account/fields/Shipping_Address_Full__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Full__c</fullName>
    <formula>if(ShippingCity != &apos;&apos;,ShippingStreet + BR() +
ShippingCity+ &quot;, &quot;+ ShippingState + &quot; &quot; + ShippingPostalCode,&apos;&apos;)</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>