fullSandbox11072023/force-app/main/default/objects/Account/fields/SurgicalSpecialist__c.field-meta.xml
<CustomField>
    <fullName>SurgicalSpecialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgical Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>