fullSandbox11072023/force-app/main/default/objects/Account/fields/Surpass_Account__c.field-meta.xml
<CustomField>
    <fullName>Surpass_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to track Surpass accounts</description>
    <label>Surpass Account</label>
    <type>Checkbox</type>
</CustomField>