fullSandbox11072023/force-app/main/default/objects/Account/fields/TAM_Target__c.field-meta.xml
<CustomField>
    <fullName>TAM_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Anesthesia BU as part of TAM project where the Reps can check this field to identify if it is a TAM target.</description>
    <label>TAM Target</label>
    <type>Checkbox</type>
</CustomField>