fullSandbox11072023/force-app/main/default/objects/Account/fields/Target_Profile_Count__c.field-meta.xml
<CustomField>
    <fullName>Target_Profile_Count__c</fullName>
    <description>This is to  display the no of TP records that an account have.</description>
    <label>Target Profile Count</label>
    <summaryForeignKey>Target_Profile__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>