fullSandbox11072023/force-app/main/default/objects/Account/fields/Target_Profile_TP_Range__c.field-meta.xml
<CustomField>
    <fullName>Target_Profile_TP_Range__c</fullName>
    <label>Target Profile TP Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>