fullSandbox11072023/force-app/main/default/objects/Account/fields/Target_Profiles_Count__c.field-meta.xml
<CustomField>
    <fullName>Target_Profiles_Count__c</fullName>
    <description>This field is to store the number of Target profiles an account have.</description>
    <label>Target Profiles Count</label>
    <summaryForeignKey>Target_Profile__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>