fullSandbox11072023/force-app/main/default/objects/Account/fields/TeachingHospital__c.field-meta.xml
<CustomField>
    <fullName>TeachingHospital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Teaching Hospital</label>
    <type>Checkbox</type>
</CustomField>