fullSandbox11072023/force-app/main/default/objects/Account/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <description>Payment Terms</description>
    <inlineHelpText>Payment Terms</inlineHelpText>
    <label>Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>