fullSandbox11072023/force-app/main/default/objects/Account/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10CR - HO Corporate Retail</fullName>
            </value>
            <value>
                <fullName>10HO - HO Hardware</fullName>
            </value>
            <value>
                <fullName>10IR - HO Independent Retail</fullName>
            </value>
            <value>
                <fullName>10SI - HO Safety &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>12CR - NSW Corporate Retail</fullName>
            </value>
            <value>
                <fullName>12IR - NSW Independent Retail</fullName>
            </value>
            <value>
                <fullName>12SI - NSW Safety &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>13CR - VIC Corporate Retail</fullName>
            </value>
            <value>
                <fullName>13IR - VIC Independent Retail</fullName>
            </value>
            <value>
                <fullName>13SI - VIC Safety &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>14CR - QLD Corporate Retail</fullName>
            </value>
            <value>
                <fullName>14IR - QLD Independent Retail</fullName>
            </value>
            <value>
                <fullName>14SI - QLD Safety &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>15CR - SA Corporate Retail</fullName>
            </value>
            <value>
                <fullName>15IR - SA Independent Retail</fullName>
            </value>
            <value>
                <fullName>15SI - SA Safety &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>16CR - WA Corporate Retail</fullName>
            </value>
            <value>
                <fullName>16IR - WA Independent Retail</fullName>
            </value>
            <value>
                <fullName>16SI - WA Safety &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>18CR - Int/Emer Corporate Retail</fullName>
            </value>
            <value>
                <fullName>18IR - Int/Emer Independent Retail</fullName>
            </value>
            <value>
                <fullName>18SI - Int/Emer Safety &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>31IN - Fishers Industrial</fullName>
            </value>
            <value>
                <fullName>31RS - Fishers Reseller</fullName>
            </value>
            <value>
                <fullName>4201 - ACT</fullName>
            </value>
            <value>
                <fullName>4202 - South Eastern Sydney</fullName>
            </value>
            <value>
                <fullName>4203 - Southern NSW</fullName>
            </value>
            <value>
                <fullName>4204 - South Western Sydney</fullName>
            </value>
            <value>
                <fullName>4205 - Western NSW</fullName>
            </value>
            <value>
                <fullName>4206 - Western Syd LHN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>