fullSandbox11072023/force-app/main/default/objects/Account/fields/Territory_Alignment_Skip__c.field-meta.xml
<CustomField>
    <fullName>Territory_Alignment_Skip__c</fullName>
    <formula>if(AND(BillingCountry &lt;&gt; &quot;US&quot;,BillingCountry &lt;&gt; &quot;CA&quot;),TRUE,
if(AND(ISBLANK( BillingState ),ISBLANK( BillingPostalCode ),ISBLANK( SAP_Sold_To__c )),TRUE,
if(OR(
RecordType.Name = &quot;Mayo Healthcare Account Record Type&quot;,
RecordType.Name = &quot;GPO Account&quot;,
RecordType.Name = &quot;IDN Account&quot;,
RecordType.Name = &quot;Associations&quot;
),TRUE,
FALSE
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Alignment Skip</label>
    <type>Checkbox</type>
</CustomField>