fullSandbox11072023/force-app/main/default/objects/Account/fields/Territory_Key__c.field-meta.xml
<CustomField>
    <fullName>Territory_Key__c</fullName>
    <description>Territory_Key__c is built every day as part of the daily Invoiced Sales ETL. 
Apex: account_Active_Sales
Scheduled Apex: Invoiced_Sales_Maintenance_Scheduler</description>
    <inlineHelpText>List of Territory Numbers that have Sales related to this Account.</inlineHelpText>
    <label>Territory Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>