fullSandbox11072023/force-app/main/default/objects/Account/fields/Total_PFY_rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_PFY_rollup__c</fullName>
    <label>Total PFY</label>
    <summarizedField>Top_10_Selling_Products__c.Sales_Prior_Year__c</summarizedField>
    <summaryForeignKey>Top_10_Selling_Products__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>