fullSandbox11072023/force-app/main/default/objects/Account/fields/West_Account__c.field-meta.xml
<CustomField>
    <fullName>West_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if an account is West&apos;s</description>
    <label>West Account</label>
    <type>Checkbox</type>
</CustomField>