fullSandbox11072023/force-app/main/default/objects/Account/fields/Working__c.field-meta.xml
<CustomField>
    <fullName>Working__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to flag accounts in list views which are considered call worthy.</description>
    <inlineHelpText>Flag this box if you are currently working this account.</inlineHelpText>
    <label>Working</label>
    <type>Checkbox</type>
</CustomField>