fullSandbox11072023/force-app/main/default/objects/Account/fields/Zip1__c.field-meta.xml
<CustomField>
    <fullName>Zip1__c</fullName>
    <formula>LEFT( BillingPostalCode ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip1</label>
    <type>Text</type>
</CustomField>