fullSandbox11072023/force-app/main/default/objects/Account/fields/Zip3__c.field-meta.xml
<CustomField>
    <fullName>Zip3__c</fullName>
    <formula>LEFT(BillingPostalCode,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip3</label>
    <type>Text</type>
</CustomField>