fullSandbox11072023/force-app/main/default/objects/Account/fields/Zip5__c.field-meta.xml
<CustomField>
    <fullName>Zip5__c</fullName>
    <formula>LEFT(BillingPostalCode,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip5</label>
    <type>Text</type>
</CustomField>