fullSandbox11072023/force-app/main/default/objects/Account/recordTypes/Associations.recordType-meta.xml
<RecordType>
    <fullName>Associations</fullName>
    <active>true</active>
    <description>Societies and other associations that are not potential customer accounts.  Used to track and consolidate education records.</description>
    <label>Associations</label>
</RecordType>