fullSandbox11072023/force-app/main/default/objects/Account/recordTypes/EMEA_Customer.recordType-meta.xml
<RecordType>
    <fullName>EMEA_Customer</fullName>
    <active>true</active>
    <label>EMEA Customer</label>
</RecordType>