fullSandbox11072023/force-app/main/default/objects/Account/recordTypes/EMS_Prospect.recordType-meta.xml
<RecordType>
    <fullName>EMS_Prospect</fullName>
    <active>true</active>
    <description>Used for Customers who do not currently have an SAP Code nor has the Account been vetted by the Customer Master Team..</description>
    <label>Prospect Customer</label>
</RecordType>