fullSandbox11072023/force-app/main/default/objects/Account/recordTypes/GPO_Account.recordType-meta.xml
<RecordType>
    <fullName>GPO_Account</fullName>
    <active>true</active>
    <label>GPO Account</label>
</RecordType>