fullSandbox11072023/force-app/main/default/objects/Account/recordTypes/IDN_Account.recordType-meta.xml
<RecordType>
    <fullName>IDN_Account</fullName>
    <active>true</active>
    <label>IDN Account</label>
</RecordType>