fullSandbox11072023/force-app/main/default/objects/Account/recordTypes/LatAm_Customer.recordType-meta.xml
<RecordType>
    <fullName>LatAm_Customer</fullName>
    <active>true</active>
    <description>LatAm Customer</description>
    <label>LatAm Customer</label>
</RecordType>