fullSandbox11072023/force-app/main/default/objects/Account/recordTypes/Vascular_Customer_NA.recordType-meta.xml
<RecordType>
    <fullName>Vascular_Customer_NA</fullName>
    <active>true</active>
    <description>Vasular Customer NA</description>
    <label>North American Customer</label>
</RecordType>