fullSandbox11072023/force-app/main/default/objects/Account/validationRules/AR_Require_At_Risk_Status_when_at_risk.validationRule-meta.xml
<ValidationRule>
    <fullName>AR_Require_At_Risk_Status_when_at_risk</fullName>
    <active>false</active>
    <errorConditionFormula>AND( A_R_at_risk__c = True, Text(A_R_at_risk_status__c) = &quot;&quot;)</errorConditionFormula>
    <errorMessage>Select an At Risk Status for this account</errorMessage>
</ValidationRule>