fullSandbox11072023/force-app/main/default/objects/Account/validationRules/AR_Require_Information_if_Lost_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>AR_Require_Information_if_Lost_reason</fullName>
    <active>false</active>
    <description>If the Account At Risk is set to Lost</description>
    <errorConditionFormula>AND(TEXT(A_R_at_risk_status__c) = &quot;Lost&quot;, isblank( A_R_Description_of_At_Risk_Business__c ))</errorConditionFormula>
    <errorMessage>Please provide reason this account was lost</errorMessage>
</ValidationRule>