fullSandbox11072023/force-app/main/default/objects/Account/validationRules/ERP_Active_Editable_by_LatAm.validationRule-meta.xml
<ValidationRule>
    <fullName>ERP_Active_Editable_by_LatAm</fullName>
    <active>false</active>
    <description>Allows editing of active status of accounts that aren&apos;t created by system administrators</description>
    <errorConditionFormula>and(Owner.ProfileId == &apos;00eE0000000lT3Q&apos;, $User.ProfileId != &apos;00eE0000000lT3Q&apos;, ISCHANGED(ERP_Active__c), RecordTypeId == &apos;012E0000000RHE6&apos;)</errorConditionFormula>
    <errorMessage>You cannot edit the ERP Active field on this account</errorMessage>
</ValidationRule>