fullSandbox11072023/force-app/main/default/objects/Account/validationRules/IA_Require_At_Risk_Status_when_at_risk.validationRule-meta.xml
<ValidationRule>
    <fullName>IA_Require_At_Risk_Status_when_at_risk</fullName>
    <active>false</active>
    <description>Require the user to select a status when the account is set to At Risk</description>
    <errorConditionFormula>AND( IA_At_Risk__c = True, Text(IA_at_risk_Status__c) = &quot;&quot;)</errorConditionFormula>
    <errorMessage>Select and At Risk Status for this account</errorMessage>
</ValidationRule>