fullSandbox11072023/force-app/main/default/objects/Account/validationRules/IA_Require_Information_if_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>IA_Require_Information_if_Lost</fullName>
    <active>false</active>
    <description>If the Account At Risk is set to Lost</description>
    <errorConditionFormula>AND(TEXT(IA_at_risk_Status__c)  = &quot;Lost&quot;, Text( IA_at_risk_Competitor__c  ) = &quot;&quot;)</errorConditionFormula>
    <errorMessage>Please enter the competitor this account was lost to.</errorMessage>
</ValidationRule>