fullSandbox11072023/force-app/main/default/objects/Account/validationRules/IA_Require_Information_if_Lost_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>IA_Require_Information_if_Lost_reason</fullName>
    <active>false</active>
    <description>If the Account At Risk is set to Lost</description>
    <errorConditionFormula>AND(TEXT( IA_at_risk_Status__c ) = &quot;Lost&quot;, isblank(  IA_at_risk_Description__c ))</errorConditionFormula>
    <errorMessage>Please provide reason this account was lost</errorMessage>
</ValidationRule>