fullSandbox11072023/force-app/main/default/objects/Account/validationRules/LatAm_Require_Information_if_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>LatAm_Require_Information_if_Lost</fullName>
    <active>false</active>
    <description>If the Account At Risk is set to Lost</description>
    <errorConditionFormula>AND(TEXT(LatAm_At_Risk_Competitor__c)  = &quot;Lost&quot;, Text( LatAm_At_Risk_Competitor__c ) = &quot;&quot;)</errorConditionFormula>
    <errorMessage>Please enter the competitor this account was lost to.</errorMessage>
</ValidationRule>