fullSandbox11072023/force-app/main/default/objects/Account/validationRules/LatAm_Require_Information_if_Lost_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>LatAm_Require_Information_if_Lost_amount</fullName>
    <active>false</active>
    <description>If the Account At Risk is set to Lost</description>
    <errorConditionFormula>AND(TEXT( LatAm_At_Risk_Status__c ) = &quot;Lost&quot;, isblank( LatAm_at_risk_amount__c ) )</errorConditionFormula>
    <errorMessage>Please enter the amount lost on this account</errorMessage>
</ValidationRule>