fullSandbox11072023/force-app/main/default/objects/Account/validationRules/LatAm_Require_Information_if_Lost_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>LatAm_Require_Information_if_Lost_reason</fullName>
    <active>false</active>
    <description>If the Account At Risk is set to Lost</description>
    <errorConditionFormula>AND(TEXT( LatAm_At_Risk_Status__c ) = &quot;Lost&quot;, isblank(  LatAm_Description_of_At_Risk_Business__c ))</errorConditionFormula>
    <errorMessage>Please provide reason this account was lost</errorMessage>
</ValidationRule>