fullSandbox11072023/force-app/main/default/objects/Account/validationRules/Require_At_Risk_Status_when_at_risk.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_At_Risk_Status_when_at_risk</fullName>
    <active>false</active>
    <description>Require the user to select a status when the account is set to At Risk</description>
    <errorConditionFormula>AND(At_Risk__c = True, Text(At_Risk_Status__c) = &quot;&quot;,  $User.ProfileId != &quot;00eE0000000lT3Q&quot; )</errorConditionFormula>
    <errorMessage>Select an At Risk Status for this account</errorMessage>
</ValidationRule>