fullSandbox11072023/force-app/main/default/objects/Account/validationRules/Require_Information_if_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Information_if_Lost</fullName>
    <active>false</active>
    <description>If the Account At Risk is set to Lost</description>
    <errorConditionFormula>AND(TEXT( At_Risk_Status__c )  = &quot;Lost&quot;, Text(   Competitor__c   ) = &quot;&quot;,  $User.ProfileId != &quot;00eE0000000lT3Q&quot;)</errorConditionFormula>
    <errorMessage>Please enter the competitor this account was lost to.</errorMessage>
</ValidationRule>