fullSandbox11072023/force-app/main/default/objects/Account/validationRules/Require_Information_if_Lost_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Information_if_Lost_amount</fullName>
    <active>false</active>
    <description>If the Account At Risk is set to Lost</description>
    <errorConditionFormula>AND(TEXT(At_Risk_Status__c) = &quot;Lost&quot;, isblank(Amount__c),  $User.ProfileId != &quot;00eE0000000lT3Q&quot; )</errorConditionFormula>
    <errorMessage>Please enter the amount lost on this account</errorMessage>
</ValidationRule>