fullSandbox11072023/force-app/main/default/objects/Account/validationRules/Require_Information_if_Lost_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Information_if_Lost_reason</fullName>
    <active>false</active>
    <description>If the Account At Risk is set to Lost</description>
    <errorConditionFormula>AND(TEXT(At_Risk_Status__c) = &quot;Lost&quot;, isblank( Description_of_At_Risk_Business__c ),  $User.ProfileId != &quot;00eE0000000lT3Q&quot;)</errorConditionFormula>
    <errorMessage>Please provide reason this account was lost</errorMessage>
</ValidationRule>