fullSandbox11072023/force-app/main/default/objects/Account/validationRules/SM_Require_Information_if_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>SM_Require_Information_if_Lost</fullName>
    <active>false</active>
    <description>If the Account At Risk is set to Lost</description>
    <errorConditionFormula>AND(TEXT(Specialty_At_Risk_Status__c)  = &quot;Lost&quot;, Text( Specialty_Competitor__c  ) = &quot;&quot;)</errorConditionFormula>
    <errorMessage>Please enter the competitor this account was lost to.</errorMessage>
</ValidationRule>